--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Happy Valentine’s Week Mom & Dad ❤️</title>
+<title>Happy Valentine’s Week Mummy & Papa ❤️</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -47,25 +47,17 @@
 
 <div id="surprise" class="hidden heart-box sparkle">
 
-  <div class="heart-animation">💖</div>
+  <h2>💖 Will You Open My Heart? 💖</h2>
 
-  <div class="letter">
-    <h2>💌 My Heart Is Open 💌</h2>
-    <p>
-      Mom & Dad ❤️<br><br>
-      Your love taught me patience, sacrifice, kindness and faith.
-      Watching you both makes me believe in forever.
-      <br><br>
-      You are my world, my home, and my greatest blessing.
-      <br><br>
-      Happy Valentine’s Week to the best parents ever 💖
-    </p>
+  <div class="buttons">
+    <button id="yesBtn">YES ❤️</button>
+    <button id="noBtn">NO 💔</button>
   </div>
 
 </div>
 
-</div>
 
 <script src="script.js"></script>
 </body>
 </html>
+
