--- a/index.html
+++ b/index.html
@@ -44,20 +44,18 @@
 </div>
 
 <button onclick="showSurprise()">💖 Open My Heart</button>
+<div id="surprise" class="hidden">
+  <h2>Will you open my heart? 💖</h2>
 
-<div id="surprise" class="hidden heart-box sparkle">
-
-  <h2>💖 Will You Open My Heart? 💖</h2>
-
-  <div class="buttons">
-    <button id="yesBtn">YES ❤️</button>
-    <button id="noBtn">NO 💔</button>
+  <div class="btn-box">
+    <button id="yesBtn">Yes 💕</button>
+    <button id="noBtn">No 💔</button>
   </div>
-
 </div>
 
 
 <script src="script.js"></script>
 </body>
 </html>
+
 
