--- a/index.html
+++ b/index.html
@@ -55,7 +55,12 @@
 
 
 <script src="script.js"></script>
+  <audio id="heartMusic" loop>
+  <source src="heart-music.mp3" type="audio/mpeg">
+</audio>
+
 </body>
 </html>
+
 
 
