--- a/message.html
+++ b/message.html
@@ -2,27 +2,32 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>My Heart Is Open For You 💖</title>
+<title>My Heart Is Open 💐</title>
 <link rel="stylesheet" href="style.css">
 </head>
-<body class="final-page">
+<body>
 
-<div class="petals"></div>
+<!-- Heart Music -->
+<audio id="heartMusic" loop autoplay>
+  <source src="heart-music.mp3" type="audio/mpeg">
+</audio>
 
-<div class="final-box">
-  <h1>My Heart Is Open For You 💖</h1>
-
-  <p class="final-msg">
-    Mom & Dad ❤️<br><br>
-    Your love taught me patience, sacrifice, kindness and faith.
-    Watching you both makes me believe in forever.
-    <br><br>
-    You are my world, my home, and my greatest blessing.
-    <br><br>
-    Happy Valentine’s Week to the best parents ever 💖
-  </p>
+<div class="final-page">
+  <div class="final-box">
+    <h1>My Heart Is Open For You 💐</h1>
+    <div class="petals"></div>
+    <p class="final-msg">
+      Mummy & Papa ❤️<br><br>
+      Your love taught me patience, sacrifice, kindness and faith.
+      Watching you both makes me believe in forever.
+      <br><br>
+      You are my world, my home, and my greatest blessing.
+      <br><br>
+      Happy Valentine’s Week to the best parents ever 💖
+    </p>
+  </div>
 </div>
 
-<script src="script.js"></script>
+<script src="message.js"></script>
 </body>
 </html>
