--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<button id="startBtn">▶ Start</button>
 
 <!-- Background Music -->
 <audio id="bgm" loop preload="auto">
@@ -67,3 +68,4 @@
 
 </body>
 </html>
+
