--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Happy Valentine’s Week Mummy & Papa ❤️</title>
-<link rel="stylesheet" href="style.css">
+<<title>For My Lovely Parents ❤️</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+<!-- Background Music -->
+<audio id="bgMusic" autoplay loop>
+  <source src="music.mp3" type="audio/mpeg">
+</audio>
 <button id="startBtn">▶ Start</button>
 
 <!-- Background Music -->
@@ -68,4 +73,5 @@
 
 </body>
 </html>
+
 
