--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.">
 <<title>For My Lovely Parents ❤️</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -23,21 +24,168 @@
   <source src="heart-music.mp3" type="audio/mpeg">
 </audio>
 
-<!-- Cinematic Intro -->
+background:radial-gradient(circle,#ffdee9,#b5fffc);
+overflow:hidden;
+height:100vh;
+}
+
+/* Cinematic Intro */
+.cinematic-intro{
+position:fixed;
+top:0;left:0;
+width:100%;
+height:100%;
+background:linear-gradient(135deg,#0f0c29,#302b63,#24243e);
+display:flex;
+flex-direction:column;
+align-items:center;
+justify-content:center;
+color:white;
+z-index:9999;
+animation:fadeIn 2s ease;
+}
+
+.cinema-title{
+font-family:'Great Vibes',cursive;
+font-size:60px;
+margin-bottom:15px;
+animation:glow 2s infinite alternate;
+}
+
+.cinematic-intro p{
+font-size:18px;
+opacity:.8;
+margin-bottom:30px;
+}
+
+#startBtn{
+padding:15px 45px;
+font-size:20px;
+border:none;
+border-radius:40px;
+background:linear-gradient(45deg,#ff416c,#ff4b2b);
+color:white;
+cursor:pointer;
+box-shadow:0 0 20px rgba(255,75,75,.8);
+transition:.3s;
+}
+
+#startBtn:hover{transform:scale(1.1);}
+
+@keyframes glow{
+from{text-shadow:0 0 10px pink;}
+to{text-shadow:0 0 30px hotpink;}
+}
+
+@keyframes fadeIn{
+from{opacity:0;}
+to{opacity:1;}
+}
+
+/* Main Page */
+.container{
+text-align:center;
+padding:30px;
+color:#fff;
+position:absolute;
+top:0;left:0;
+width:100%;
+height:100%;
+display:none;
+animation:fadeUp 2s ease;
+}
+
+@keyframes fadeUp{
+from{opacity:0;transform:translateY(40px);}
+to{opacity:1;transform:translateY(0);}
+}
+
+h1{font-family:'Great Vibes',cursive;font-size:55px;color:#ff4b7d}
+h2{margin-top:10px}
+
+.intro{
+margin:20px auto;
+font-size:20px;
+max-width:600px;
+}
+
+/* Slideshow */
+.slideshow{
+width:280px;
+height:280px;
+margin:30px auto;
+border-radius:50%;
+overflow:hidden;
+border:6px solid white;
+box-shadow:0 0 20px rgba(255,255,255,.8);
+}
+
+.slides{
+width:100%;
+height:100%;
+object-fit:cover;
+display:none;
+}
+
+/* Hearts Animation */
+.hearts span{
+position:fixed;
+bottom:-50px;
+font-size:24px;
+animation:float 10s linear infinite;
+}
+
+@keyframes float{
+0%{transform:translateY(0);opacity:1}
+100%{transform:translateY(-110vh);opacity:0}
+}
+
+.timeline{
+margin:30px auto;
+max-width:500px;
+background:rgba(255,255,255,.15);
+padding:20px;
+border-radius:15px;
+}
+
+.event{
+margin:10px 0;
+}
+
+button{
+margin-top:25px;
+padding:12px 35px;
+border:none;
+border-radius:30px;
+font-size:18px;
+cursor:pointer;
+background:linear-gradient(45deg,#ff512f,#dd2476);
+color:white;
+}
+
+.hidden{display:none}
+
+</style>
+</head>
+
+<body>
+
+<audio id="bgm" loop>
+  <source src="music.mp3" type="audio/mpeg">
+</audio>
+
 <div class="cinematic-intro" id="intro">
   <h1 class="cinema-title">💖 A Love Story 💖</h1>
-  <p>Dedicated to the most beautiful parents in the world</p>
+  <p>Dedicated to the most beautiful parents</p>
   <button id="startBtn">▶ Start</button>
 </div>
 
 <div class="hearts"></div>
-<div class="roses"></div>
-<div class="sparkles"></div>
 
-<div class="container hidden" id="main">
+<div class="container" id="main">
 
-  <h1>💖 Happy Valentine’s Week 💖</h1>
-  <h2>To My Loving Parents</h2>
+  <h1>Happy Valentine’s Week</h1>
+  <h2>To My Loving Mummy & Papa ❤️</h2>
 
   <p class="intro" id="typewriter"></p>
 
@@ -47,16 +195,17 @@
     <img class="slides" src="img3.jpg">
   </div>
 
-  <h2>💞 Your Beautiful Journey 💞</h2>
-
   <div class="timeline">
     <div class="event">💍 Wedding Day — Two hearts became one</div>
-    <div class="event">🏡 Building Home — Love created our family</div>
+    <div class="event">🏡 Building Home — Love created family</div>
     <div class="event">👶 My Birth — Your love gave me life</div>
-    <div class="event">🌈 Today — Still deeply in love</div>
+    <div class="event">🌈 Forever — Still deeply in love</div>
   </div>
 
-  <button onclick="showSurprise()">💖 Open My Heart</button>
+  <button onclick="location.href='message.html'">💖 Open My Heart</button>
+
+</div>
+ <button onclick="showSurprise()">💖 Open My Heart</button>
 
   <div id="surprise" class="hidden">
     <h2>Will you open my heart? 💖</h2>
@@ -67,10 +216,59 @@
   </div>
 
 </div>
+<script>
+const intro = document.getElementById("intro");
+const main = document.getElementById("main");
+const bgm = document.getElementById("bgm");
 
+document.getElementById("startBtn").onclick = () => {
+  bgm.play();
+  intro.style.opacity="0";
+  setTimeout(()=>{
+    intro.style.display="none";
+    main.style.display="block";
+    startTyping();
+    startSlides();
+    createHearts();
+  },1500);
+};
+
+const text="Mummy & Papa, your love is my strength, my happiness, and my world. This small gift is full of big emotions just for you 💕";
+let i=0;
+function startTyping(){
+ if(i<text.length){
+ document.getElementById("typewriter").innerHTML+=text.charAt(i);
+ i++;
+ setTimeout(startTyping,60);
+ }
+}
+
+/* Slideshow */
+let slideIndex=0;
+function startSlides(){
+ let slides=document.querySelectorAll(".slides");
+ slides.forEach(s=>s.style.display="none");
+ slideIndex++;
+ if(slideIndex>slides.length){slideIndex=1}
+ slides[slideIndex-1].style.display="block";
+ setTimeout(startSlides,2500);
+}
+
+/* Hearts */
+function createHearts(){
+ setInterval(()=>{
+ let heart=document.createElement("span");
+ heart.innerHTML="💖";
+ heart.style.left=Math.random()*100+"vw";
+ heart.style.fontSize=Math.random()*20+15+"px";
+ heart.style.animationDuration=Math.random()*5+5+"s";
+ document.querySelector(".hearts").appendChild(heart);
+ setTimeout(()=>heart.remove(),10000);
+ },300);
+}
 <!-- Script -->
+</script>
 <script src="script.js"></script>
-
 </body>
 </html>
 
