--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.">
-<<title>For My Lovely Parents ❤️</title>
+<title>For My Lovely Parents ❤️</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -52,4 +52,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
