--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>For My Lovely Parents ❤️</title>
-  <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -52,5 +52,3 @@
 <script src="script.js"></script>
 </body>
 </html>
-
-
